--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,16 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Cormorant+Garamond:wght@300&family=Cormorant+Infant:wght@300&family=Forum&family=Lora&family=Montserrat&family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Cormorant+Garamond:wght@300&family=Cormorant+Infant:wght@300&family=Forum&family=Lora&family=Montserrat&family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <title>CRWN Clothing</title>
+  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
 </html>
